# directed-smart-contract

./: .env  .gitignore  README.md  cabal.project  datum.json  directed-smart-contract.cabal  hie.yaml  plan.md  plan.txt
.devcontainer/: Dockerfile
app/: README.md  tokenName.hs  writeDatum.hs  writeScholDatum.hs  writeScholRedeemer.hs  writeScripts.hs  writeUnit.hs
code/: cabal.project
code/Utilities/src/Utilities/: Conversions.hs  PlutusTx.hs  Serialise.hs
code/demoTestnet/: acceptancePolicy.script  edmundSchool.pkh  kidusExaminer.pkh  milestonePolicy.script  poolValidator.script  scholarshipValidator.script
code/demoTestnetTestRun/: acceptancePolicy.script  edmundSchool.pkh  milestonePolicy.script  poolValidator.script  scholarshipValidator.script
code/directed-smart-contract/: directed-smart-contract.cabal  hie.yaml  milestonePolicy.script  scholarshipValidator.script
code/directed-smart-contract/app/: tokenName.hs  writePoolRedeemer.hs  writeScholDatum.hs  writeScholRedeemer.hs  writeScripts.hs  writeUnit.hs
code/directed-smart-contract/src/: Homework1.hs  MilestoneToken.hs  Scholarship.hs  ScholarshipPool.hs  Utils.hs  VerifiedByToken.hs
code/directed-smart-contract/tests/: testMilestoneToken.hs  testScholarship.hs  testScholarshipPool.hs  testVerifiedByToken.hs
code/lucid/: acceptancePolicy.script  lucid_flow.ts  lucid_functions.ts  lucid_get_pkh.ts  lucid_test.ts  milestonePolicy.script  poolValidator.script  scholarshipValidator.script  schoolPolicy.script  seed.ts
code/lucid_backend/: lucid_functions.ts
code/meshTestnet/: acceptancePolicy.script  milestonePolicy.script  poolValidator.addr  poolValidator.script  scholarshipValidator.addr  scholarshipValidator.script  schoolPolicy.script  testAuthority.addr  testAuthority.hash  testAuthority.skey  testAuthority.vkey  testCP.addr  testCP.hash  testCP.skey  testCP.vkey  testDonor.addr  testDonor.hash  testDonor.skey  testDonor.vkey  testSchool.addr  testSchool.hash  testSchool.skey  testSchool.vkey  testStudent.addr  testStudent.hash  testStudent.skey  testStudent.vkey
code/testnet/: acceptancePolicy.script  activateScholarship.sh  buildScripts.sh  burnToken.sh  checkWallet.sh  completeFinalMilestone.sh  completeMilestone.sh  createScholOwnMoney-fixed.sh  createWallets.sh  datum.json  datumNew.json  datumOld.json  donate.sh  falseRedeemer.json  falseTrueRedeemer.json  freePolicy.hash  milestonePolicy.script  mintAcceptanceToken.sh  mintMilestoneToken.sh  mintSchoolToken.sh  poolValidator.addr  poolValidator.script  scholarshipValidator.addr  scholarshipValidator.script  schoolPolicy.script  send.sh  send7UTXO.sh  sendToScript.sh  sendUTXO.sh  studentPkhRedeemer.json  testAuthority.addr  testAuthority.hash  testAuthority.skey  testAuthority.vkey  testCP.addr  testCP.hash  testCP.skey  testCP.vkey  testDonor.addr  testDonor.hash  (+13 more)
src/: AdmissionToken.hs  Contract.hs  README.md  Scholarship copy.hs  Scholarship.hs  ScholarshipPool copy.hs  ScholarshipPool.hs  SchoolToken.hs  TestContract.hs  TestFreeToken.hs  TestScholarship.hs  Utils.hs  VerifiedByToken.hs  contract.hs
testnet/: acceptancePolicy.script  buildScripts.sh  burnToken.sh  checkWallet.sh  completeMilestone.sh  createScholOwnMoney-fixed.sh  createWallets.sh  datumNew.hash  datumOld.hash  emergencyRefundScholarship.sh  falseFalseRedeemer.json  milestonePolicy.script  mintAcceptanceToken.sh  mintMilestoneToken.sh  poolValidator.script  refundScholarship.sh  replAndPrint2.sh  scholarshipValidator.addr  scholarshipValidator.script  send.sh  sendToScript.sh  testAuthority.addr  testAuthority.hash  testCP.addr  testCP.hash  testDonor.addr  testDonor.hash  testSchool.addr  testSchool.hash  testStudent.addr  testStudent.hash  tx.body  tx.signed  tx.unsigned
